--- a/sist-cad-aluno-nota/.settings/org.eclipse.wst.common.component
+++ b/sist-cad-aluno-nota/.settings/org.eclipse.wst.common.component
@@ -2,6 +2,7 @@
     <wb-module deploy-name="sist-cad-aluno-nota">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/JavaSource"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/JavaTest"/>
         <property name="context-root" value="sist-cad-aluno-nota"/>
         <property name="java-output-path" value="/sist-cad-aluno-nota/WebContent/WEB-INF/classes"/>
     </wb-module>
